# novel-tts

./: .gitignore  .stignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json  settings.local.json
configs/: app.yaml
docs/: ARCHITECTURE.md  ARCHITECTURE_DEV.md
novel_tts/: __main__.py  key_identity.py  media_batch.py
novel_tts.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: PORT_FORWARD.md  backfill_glossary_consistency.py  com.codex.portforward.redis.onprem.plist  fill_missing_chapters.py  fix_fake_virtual_fishing_rod.py  normalize_origin_batches.py  on_premise_portforward.py  polish_story_style.py  run_garbage_fixed_under_751.py  run_garbage_fixed_under_751.sh
tests/: test_ai_key_counts.py  test_ai_key_ps.py  test_app_local_config.py  test_bqg104_resolver.py  test_cli_rate_limit_exit_code.py  test_config_tts_merge.py  test_crawl_proxy_and_force.py  test_crawl_repair_inline_replace.py  test_crawl_repair_report.py  test_crawl_repair_requires_config.py  test_crawl_run_all_flag.py  test_crawl_verify_duplicate_content.py  test_crawl_verify_failure_manifest_filtering.py  test_crawl_verify_flags.py  test_gemini_http_provider.py  test_glossary_placeholder_guard.py  test_ixdzs_resolver.py  test_llm_live.py  test_logrotate.py  test_media_batch_config.py  test_media_visual_requirements.py  test_pipeline_upload_integration.py  test_providers_quota_raise_propagates.py  test_proxy_gateway_mapping.py  test_queue_add_and_launch_flags.py  test_queue_cooldown_jitter.py  test_queue_gemini_429_probe.py  (+40 more)
(+163 files in other folders)
